<resources>
    <string name="app_name">FavFoodRoom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_food_and_person_to_show">No food and person to show</string>
    <string name="add_entry">Add entry</string>
    <string name="clear_entries">clear entries</string>
    <string name="Added_message">entry has been added</string>
    <string name="num">123456</string>
    <string name="name">Fahad</string>
    <string name="food">Hummus</string>
    <string name="placeholder_text">PlaceHolder text</string>
    <string name="food_image">Food Image</string>
    <string name="food_name">Food Name</string>
    <string name="nameString">Name</string>

</resources>