<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="addfavfoodViewModel"
            type="com.example.favfoodroom.addfavfood.AddfavfoodViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        tools:context=".addfavfood.AddfavfoodFragment">


        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark"
            android:text="@string/add_entry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{() -> addfavfoodViewModel.putFoodHolderValueToTrue()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.75" />

        <EditText
            android:id="@+id/foodEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Enter your fav food"
            android:ems="10"
            android:hint="@string/food_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={addfavfoodViewModel.food}"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Enter your name"
            android:ems="10"

            android:hint="@string/nameString"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={addfavfoodViewModel.name}"
            app:layout_constraintBottom_toTopOf="@+id/foodEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="LabelFor" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>